add conroller
