# app/serializers/comment_shallow_serializer.rb
@@ -1,5 +1,0 @@
-# frozen_string_literal: true
-
-class CommentShallowSerializer < Panko::Serializer
-  attributes :id, :content, :created_at, :updated_at
-end
